--- a/events.html
+++ b/events.html
@@ -5,9 +5,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Events/Concerts</title>
+    <title>Events</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="main.css"/>
+    <link rel="stylesheet" type="text/css" href="css/main.css"/>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 
@@ -15,7 +15,9 @@
 <body>
 <header class="panel-header-home">
     <div class="header-img-box">
+        <a href="index.html">
         <img class="img-circle" src="img/logo.jpg" alt="Logo"/>
+        </a>
     </div>
     <div class="header-content-box">
         <h1>Barrier Reef Orchestra</h1>
@@ -27,28 +29,28 @@
                 <ul class="nav nav-pills" style="float: left">
                     <li><a href=index.html>Home</a></li>
                     <li ><a href="general.html">General Information</a></li>
-                    <li><a href="">People</a></li>
+                    <li><a href="people.html">People</a></li>
                     <li class="active"><a href=events.html>Events</a></li>
-                    <li><a href="">Photo Gallery</a></li>
+                    <li><a href="gallery.html">Photo Gallery</a></li>
                 </ul>
                 <ul class="nav nav-pills  " style="float: right">
-                    <li><a href="">Contact Us</a></li>
+                    <li><a href="contactus.html">Contact Us</a></li>
                 </ul>
             </div>
         </nav>
     </div>
 </header>
-<div class="container">
+<div class="container" style="margin-bottom: 5%">
     <h1 class="text-center" style="margin: 5% 0 ">Upcoming Events</h1>
-    <div id="events-carousel" class="carousel slide" data-ride="carousel">
+    <div id="upcoming-events-carousel" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
-            <li data-target="#events-carousel" data-slide-to="0" class="active"></li>
-            <li data-target="#events-carousel" data-slide-to="1"></li>
-            <li data-target="#events-carousel" data-slide-to="2"></li>
+            <li data-target="#upcoming-events-carousel" data-slide-to="0" class="active"></li>
+            <li data-target="#upcoming-events-carousel" data-slide-to="1"></li>
+            <li data-target="#upcoming-events-carousel" data-slide-to="2"></li>
         </ol>
         <div class="carousel-inner" role="listbox">
             <div class="item active">
-                <img  src="img/carousel1.jpg" alt="...">
+                <img  src="img/carousel1.jpg" alt="Twilight Classics">
                 <div class="carousel-caption">
                     <h1>Twilight Classics</h1>
                     <p>July 17 5pm</p>
@@ -61,7 +63,7 @@
                 </div>
             </div>
             <div class="item">
-                <img  src="img/carousel2.jpg" alt="...">
+                <img  src="img/carousel2.jpg" alt="Queens Garden Concert">
                 <div class="carousel-caption">
                     <h1>Queens Garden Concert - The 1812 again</h1>
                     <p>July 31 3pm</p>
@@ -71,7 +73,7 @@
                 </div>
             </div>
             <div class="item">
-                <img  src="img/carousel3.jpg" alt="...">
+                <img  src="img/carousel3.jpg" alt="Goes to the Opera">
                 <div class="carousel-caption">
                     <h1>Barrier Reef Orchestra Goes to the Opera</h1>
                     <p>October 22 7.30pm</p>
@@ -82,40 +84,137 @@
                 </div>
             </div>
         </div>
-        <a class="left carousel-control" href="#events-carousel" role="button" data-slide="prev">
+        <a class="left carousel-control" href="#upcoming-events-carousel" role="button" data-slide="prev">
             <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
             <span class="sr-only">Previous</span>
         </a>
-        <a class="right carousel-control" href="#events-carousel" role="button" data-slide="next">
+        <a class="right carousel-control" href="#upcoming-events-carousel" role="button" data-slide="next">
             <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
             <span class="sr-only">Next</span>
         </a>
     </div>
+    <h1 class="text-center" style="margin: 5% 0 ">Past Events</h1>
+    <div id="past-events-carousel" class="carousel slide" data-ride="carousel" >
+        <ol class="carousel-indicators">
+            <li data-target="#past-events-carousel" data-slide-to="0" class="active"></li>
+            <li data-target="#past-events-carousel" data-slide-to="1"></li>
+            <li data-target="#past-events-carousel" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner" role="listbox" >
+            <div class="item active">
+                <img  src="img/pasteventsc1.png" alt="Sounds of Romance">
+                <div class="carousel-caption">
+
+                </div>
+            </div>
+            <div class="item">
+                <img  src="img/pasteventsc2.png" alt="Last Night at the Prom">
+                <div class="carousel-caption">
+
+                </div>
+            </div>
+            <div class="item">
+                <img  src="img/pasteventsc3.png" alt="MasterWorks">
+                <div class="carousel-caption">
+
+                </div>
+            </div>
+        </div>
+        <a class="left carousel-control" href="#past-events-carousel" role="button" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#past-events-carousel" role="button" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
+
 </div>
+<div id="formScreen">
+    <a href="#" class="cancel">&times;</a>
+    <br>
+    <p>First Name: <br>
+        <input type="text" name="firstname">
+        <br>
+        Last name <br>
+        <input type="text" name = "lastname">
+        <br>
+        Address <br>
+        <input type="text" name = "address">
+        <br>
+        Phone Number <br>
+        <input type="number" name = "phone">
+        <br>
+        I am interested in: <br>
+        Playing Orchestra
+        <input type="checkbox" name= "play">
+        Administration
+        <input type="checkbox" name= "play">
+        <br>
+        Player Support
+        <input type="checkbox" name= "play">
+        fundraising
+        <input type="checkbox" name= "play">
+        <br>
+        Marketing
+        <input type="checkbox" name= "play">
+        Sponsorship
+        <input type="checkbox" name= "play">
+        <br>
+        Desktop Publishing
+        <input type="checkbox" name= "play">
+    </p>
+</div>
+
+<div id="cover" ></div>
+
+<div id="formScreen2">
+    <a href="#" class="cancel">&times;</a>
+    <br>
+    <p>First Name: <br>
+        <input type="text" name="firstname">
+        <br>
+        Last name <br>
+        <input type="text" name = "lastname">
+        <br>
+        Email  <br>
+        <input type="text" name="email">
+        <br>
+        Contact Number <br>
+        <input type="number" name="phone">
+    </p>
+</div>
+
+<div id="covertwo" ></div>
+
 <footer>
-    <div class="panel-footer-fixed">
+    <div class="panel-footer">
         <div class="col-md-2 col-md-offset-1">
-            <img class="img-circle" src="img/logo.jpg">
+            <a href="index.html">
+            <img class="img-circle" src="img/logo.jpg" alt="Logo">
+            </a>
         </div>
         <div class="col-md-4 col-md-offset-1">
             <ul class="text-center" style="list-style-type: none">
                 <li>
-                    <a class="btn btn-default" href="" role="button">Join Us</a>
+                    <a class="btn btn-default" href="#formScreen" role="button">Join Us</a>
                 </li>
                 <li>
-                    <a class="btn btn-default" href="" role="button">Become a benefactor</a>
+                    <a class="btn btn-default" href="#formScreen2" role="button">Become a benefactor</a>
                 </li>
             </ul>
         </div>
         <div class="col-md-1 col-md-offset-2">
-            <a href="contactus">
-                <img src="img/fblogo.png">
+            <a href="contactus.html">
+                <img src="img/fblogo.png" alt="Facebook Logo">
             </a>
         </div>
     </div>
 </footer>
-
+<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<!-- Include all compiled plugins (below), or include individual files as needed -->
 <script src="js/bootstrap.min.js"></script>
 </body>
 </html>
